third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/freeze_field_invalid.exp

Diagnostics:
error: mutable reference in local `s` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- previous mutable field borrow
12 │         freeze(s);
   │         ^^^^^^^^^ requirement enforced here
13 │         *f;
   │         -- conflicting reference `f`used here

error: mutable reference in local `s` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:19:9
   │
17 │         let f = &s.f;
   │                 ---- previous field borrow
18 │         let g = &mut s.f; // error in v2
   │                 -------- previous mutable field borrow
19 │         freeze(s);
   │         ^^^^^^^^^ requirement enforced here
20 │         *f;
   │         -- conflicting reference `f`used here
21 │         *g;
   │         -- conflicting reference `g`used here
